# AndroidNdkStudy

./: README.md
21DaysLearnCPlus/: note.md
21DaysLearnCPlus/chapter1/: 1.6.1.cpp  1.6.3.cpp  hello
21DaysLearnCPlus/chapter10/: 10.10多继承  10.10多继承.cpp  10.1简单继承结构  10.1简单继承结构.cpp  10.4覆盖方法  10.7构造顺序和析构顺序  10.7构造顺序和析构顺序.cpp  10.8私有继承.cpp  10.9保护继承
21DaysLearnCPlus/chapter11/: 11.2虚函数  11.2虚函数.cpp  11.4析构函数声明为虚函数  11.5虚函数表  11.6抽象基类.cpp  11.8.2.2.1.cpp  11.8虚继承  11.8虚继承.cpp  11.9Clone函数
21DaysLearnCPlus/chapter12/: 12.12字面量  12.12字面量.cpp  12.1单目增减.cpp  12.2 转换运算符.cpp  12.3  12.3解除选择运算符.cpp  12.4双目加法  12.4双目加法.cpp  12.5重载运算符  12.5重载运算符.cpp  12.9重载复制运算符  12.9重载复制运算符.cpp
21DaysLearnCPlus/chapter13/: 13.1dynamic_cast  13.1dynamic_cast.cpp
21DaysLearnCPlus/chapter14/: 14.1  14.1.cpp  14.2  14.2.cpp  14.3模板函数  14.3模板函数.cpp  14.4  14.4.cpp  14.5具体模板类  14.5具体模板类.cpp  14.6静态成员对模板类和实例的影响  14.6静态成员对模板类和实例的影响.cpp  14.8实例化并使用tuple  14.8实例化并使用tuple.cpp  14.9禁止针对特定类型实例化  14.9禁止针对特定类型实例化.cpp
21DaysLearnCPlus/chapter15/: 15.1在vector中查找元素  15.1在vector中查找元素.cpp
21DaysLearnCPlus/chapter16/: 16.1实例化和复制STLstring的方法  16.1实例化和复制STLstring的方法.cpp  16.2两种访问STLstring字符元素的方式  16.2两种访问STLstring字符元素的方式.cpp  16.3使用加法或append拼接字符串  16.3使用加法或append拼接字符串.cpp  16.4使用find查找子字符串或字符  16.4使用find查找子字符串或字符.cpp  16.5使用erase截短字符串  16.5使用erase截短字符串.cpp  16.6使用reverse反转  16.6使用reverse反转.cpp  16.7使用transform转换大小写  16.7使用transform转换大小写.cpp  FindaPosition  FindaPosition.cpp  (+2 more)
CMake/cmake_demo/demo1/: CMakeLists.txt  main.c
CMake/cmake_demo/demo6/libhello/: CMakeLists.txt  hello.h
JNI/: JniNote.md
(+188 files in other folders)
